--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div
         class="text-item"
         contenteditable="true"
-        data-font="/assets/fonts/华文细黑.ttf"
+        data-font="/assets/fonts/hwxh.ttf"
         style="
             left: 343px;
             top: 416px;
@@ -273,3 +273,4 @@
   </script>
 </body>
 </html>
+
