--- a/index.html
+++ b/index.html
@@ -178,6 +178,32 @@
         >
         北京朝阳区姚家园西里一号院204
         </div>
+                <!-- 地址 -->
+        <div
+            class="text-item"
+            contenteditable="true"
+            data-font="/assets/fonts/hwxh.ttf"
+            style="
+                left: 343px;
+                top: 416px;
+                font-family: 'Font1', sans-serif;
+                font-size: 21px;
+                font-weight: 900;
+                line-height: 1.45;
+                letter-spacing: 1px;
+                color: #000000;
+                opacity: 0.2;
+                filter: blur(0.5px);
+                mix-blend-mode: normal;
+                text-shadow: normal;
+                transform: rotate(0.15deg);
+                width: 245px;
+                white-space: normal;
+                word-break: break-word;
+            "
+            >
+            北京朝阳区姚家园西里一号院204
+        </div>
         <!-- 身份证号 -->
         <div
             class="text-item"
@@ -273,4 +299,5 @@
   </script>
 </body>
 </html>
+
 
