--- a/index.html
+++ b/index.html
@@ -165,11 +165,7 @@
             opacity: 0.7;
             filter: blur(0.5px);
             mix-blend-mode: normal;
-            text-shadow:
-            0.1px 0 0 #000,
-            -0.1px 0 0 #000,
-            0 0.1px 0 #000,
-            0 -0.1px 0 #000;
+            text-shadow: normal;
             transform: rotate(0.15deg);
             width: 245px;
             white-space: normal;
@@ -299,5 +295,6 @@
   </script>
 </body>
 </html>
+
 
 
