--- a/index.html
+++ b/index.html
@@ -217,11 +217,7 @@
                 opacity: 0.7;
                 filter: blur(0.5px);
                 mix-blend-mode: normal;
-                text-shadow: 
-                0.1px 0 0 #000,
-                -0.1px 0 0 #000,
-                0 0.1px 0 #000,
-                0 -0.1px 0 #000;
+                text-shadow: normal;
                 transform: rotate(-0.2deg);
             ">110105198308191213</div>
     </div>
@@ -295,6 +291,7 @@
   </script>
 </body>
 </html>
+
 
 
 
